# paper_daily

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
data/: papers.jsonl  source_cache.jsonl
src/paper_daily/: __init__.py  cli.py  config.py  enrichment.py  http.py  metadata.py  models.py  output.py  pdf.py  ranking.py  runner.py  source_cache.py  summarizer.py  text.py
summaries/2026-05-06/: arxiv-2605-00686v1-eliminating-hidden-serialization-in-multi-node-megakernel-communication.md  doi-10-1145-3779212-3790121-a-programming-model-for-disaggregated-memory-over-cxl.md  doi-10-1145-3779212-3790146-cpu-oblivious-offloading-of-failure-atomic-transactions-for-disaggregated-memory.md  doi-10-1145-3779212-3790150-cxlmc-model-checking-cxl-shared-memory-programs.md  doi-10-1145-3779212-3790198-pact-a-criticality-first-design-for-tiered-memory.md  doi-10-1145-3779212-3790242-trust-v-toward-secure-and-reliable-storage-for-trusted-execution-environments.md  index.md  title-acos-apple-s-geo-distributed-object-store-at-acos-apple-s-geo-distributed-object-store-at-exabyte-scale.md
summaries/2026-05-07/: arxiv-2605-04467v1-keet-explaining-performance-of-gpu-kernels-using-llm-agents.md  arxiv-2605-04956v1-kernelbench-x-a-comprehensive-benchmark-for-evaluating-llm-generated-gpu-kernels.md  index.md  (+1 more)
summaries/2026-05-14/: index.md  (+3 more)
tests/: test_config_workflow.py  test_enrichment.py  test_models_ranking_metadata.py  test_pdf.py  test_runner.py  test_sources.py  test_summarizer.py
(+34 files in other folders)
