[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-daily"
version = "0.1.0"
description = "Daily OS/System paper discovery and Chinese markdown summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "PyMuPDF>=1.24.9",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "tenacity>=8.5.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "respx>=0.21.1",
  "reportlab>=4.2.2",
]

[project.scripts]
paper-daily = "paper_daily.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
